<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/dialog_bg" android:paddingLeft="6.0dip" android:paddingTop="6.0dip" android:paddingRight="6.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="350.0px" android:minHeight="220.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbarStyle="insideInset" android:id="@id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/btnNewGame" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/opNewGame" />
                <Button android:id="@id/btnArrange" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/opRerange" />
                <Button android:id="@id/btnHint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/opHint" />
                <Button android:textColor="#aaff0000" android:id="@id/btnRecommend" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/opRecomend" />
                <Button android:id="@id/btnCancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/opCancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>